@@ -2975,11 +2975,24 @@ operator|new
 name|Vector
 argument_list|()
 decl_stmt|;
+name|SegmentInfo
+name|info
+decl_stmt|;
+name|String
+name|segmentsInfosFileName
+init|=
+name|segmentInfos
+operator|.
+name|getCurrentSegmentFileName
+argument_list|()
+decl_stmt|;
 name|IndexReader
 name|sReader
 init|=
 literal|null
 decl_stmt|;
+try|try
+block|{
 if|if
 condition|(
 name|segmentInfos
@@ -3048,17 +3061,6 @@ name|i
 index|]
 argument_list|)
 expr_stmt|;
-name|SegmentInfo
-name|info
-decl_stmt|;
-name|String
-name|segmentsInfosFileName
-init|=
-name|segmentInfos
-operator|.
-name|getCurrentSegmentFileName
-argument_list|()
-decl_stmt|;
 name|boolean
 name|success
 init|=
@@ -3119,11 +3121,17 @@ name|sReader
 operator|!=
 literal|null
 condition|)
+block|{
 name|sReader
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|sReader
+operator|=
+literal|null
+expr_stmt|;
+block|}
 name|success
 operator|=
 literal|true
@@ -3144,6 +3152,23 @@ block|}
 else|else
 block|{
 name|commitTransaction
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|sReader
+operator|!=
+literal|null
+condition|)
+block|{
+name|sReader
+operator|.
+name|close
 argument_list|()
 expr_stmt|;
 block|}
@@ -3169,10 +3194,11 @@ condition|(
 name|useCompoundFile
 condition|)
 block|{
+name|boolean
 name|success
-operator|=
+init|=
 literal|false
-expr_stmt|;
+decl_stmt|;
 name|segmentsInfosFileName
 operator|=
 name|segmentInfos
@@ -4498,11 +4524,24 @@ name|reader
 operator|!=
 literal|null
 condition|)
+block|{
+try|try
+block|{
 name|reader
 operator|.
-name|close
+name|doCommit
 argument_list|()
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|reader
+operator|.
+name|doClose
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 name|int
@@ -4583,11 +4622,24 @@ name|reader
 operator|!=
 literal|null
 condition|)
+block|{
+try|try
+block|{
 name|reader
 operator|.
-name|close
+name|doCommit
 argument_list|()
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|reader
+operator|.
+name|doClose
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 comment|// Clean up bufferedDeleteTerms.
