@@ -68,6 +68,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|store
+operator|.
+name|MockRAMDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|analysis
 operator|.
 name|WhitespaceAnalyzer
@@ -351,7 +365,7 @@ name|RAMDirectory
 name|directory
 init|=
 operator|new
-name|RAMDirectory
+name|MockRAMDirectory
 argument_list|()
 decl_stmt|;
 name|IndexWriter
@@ -586,6 +600,11 @@ argument_list|)
 expr_stmt|;
 block|}
 name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|directory
 operator|.
 name|close
 argument_list|()
