@@ -716,7 +716,7 @@ name|Directory
 name|directory
 init|=
 operator|new
-name|RAMDirectory
+name|MockRAMDirectory
 argument_list|()
 decl_stmt|;
 name|runStressTest
